Se creó con Colab

--- a/Clase05/03_estructuras_de_datos_parte2.ipynb
+++ b/Clase05/03_estructuras_de_datos_parte2.ipynb
@@ -453,7 +453,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "169QsOxuvAbe"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -525,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +550,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "- Crea dos sets de números: uno con números del 1 al 10 y otro con números del 5 al 15.\n",
         "- Encuentra la intersección y unión de ambos sets.\n",
         "- Elimina un número del primer set.\n",
-        "- Usa un set para almacenar los nombres de tus amigos. Asegúrate de que no haya duplicados."
+        "- Usa un set para almacenar los nombres de tus amigos. Asegúrate de que no haya duplicados. **texto en negrita**"
       ],
       "metadata": {
         "id": "y15kQNAQvFx_"
@@ -617,12 +617,12 @@
       ],
       "metadata": {
         "id": "TK57Y4GUvQ3Z",
-        "outputId": "b4722ae3-7607-46ee-b2e6-e1b176d445bc",
+        "outputId": "483b9b84-6475-404c-8a11-1ae5da0ad05f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +648,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +678,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +715,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,24 +739,41 @@
         "                     [8,9,10]\n",
         "                    ]])\n",
         "\n",
+        "my_new_array = np.array([[[1,2,3],\n",
+        "                         [1,2,3],\n",
+        "                         [1,2,3]],\n",
         "\n",
+        "                         [[1,2,3],\n",
+        "                         [1,2,3],\n",
+        "                         [1,2,3],\n",
+        "                        ]])\n",
+        "\n",
+        "print(my_new_array)\n",
         "print(my_array)\n",
+        "\n",
         "my_array.shape # Forma de la matriz with numpy. Dimensiones (2,3,3) = 2 matrices de 3x3\n",
-        "\n"
+        "my_new_array.shape\n"
       ],
       "metadata": {
         "id": "vFhM6gKsjOo3",
-        "outputId": "f9bd3c49-6e63-4223-d22b-f04cd8802181",
+        "outputId": "1a02991b-abbe-40f2-a78e-6989789498a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[[[1 2 3]\n",
+            "  [1 2 3]\n",
+            "  [1 2 3]]\n",
+            "\n",
+            " [[1 2 3]\n",
+            "  [1 2 3]\n",
+            "  [1 2 3]]]\n",
             "[[[ 1  2  3]\n",
             "  [ 4  5  6]\n",
             "  [ 8  9 10]]\n",
@@ -774,7 +791,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 14
         }
       ]
     },
@@ -790,7 +807,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +836,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,12 +855,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "matrix_new = np.array([[1,2,2],\n",
+        "                       [2,2,2],\n",
+        "                       [3,3,3]])\n",
+        "\n",
+        "print(matrix_new)\n",
+        "matrix_new.shape"
+      ],
       "metadata": {
-        "id": "5Dvi88OUmCdM"
+        "id": "5Dvi88OUmCdM",
+        "outputId": "a31b0337-0582-4095-f711-1bd5b6b752ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 2]\n",
+            " [2 2 2]\n",
+            " [3 3 3]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -876,7 +924,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,21 +994,21 @@
       ],
       "metadata": {
         "id": "7RMRCaRPvh1s",
-        "outputId": "795eb887-ee25-4edc-c79f-6b09dba662cc",
+        "outputId": "697526e0-5d47-4af9-cb08-356fb1a1b0a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 37  43  16  36]\n",
-            " [ 58  74  60  38]\n",
-            " [ 12  80  60  15]\n",
-            " [100  48  55  80]]\n"
+            "[[17 38 88 85]\n",
+            " [54 42 14 98]\n",
+            " [57  9 86  3]\n",
+            " [97 92 52 59]]\n"
           ]
         }
       ]
@@ -985,21 +1033,21 @@
       ],
       "metadata": {
         "id": "cDAATpm-nSVL",
-        "outputId": "d14d4768-ed7c-483f-88a6-c680f93dff87",
+        "outputId": "9d879d67-29dc-4398-9490-d0731f93e76b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 72,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[100  13  87  20]\n",
-            " [ 46  82  86  12]\n",
-            " [  9  23  94  39]\n",
-            " [ 40  16  88  87]]\n"
+            "[[48 27 95 56]\n",
+            " [66  5 29 49]\n",
+            " [29 65 91  7]\n",
+            " [46  5 89 14]]\n"
           ]
         }
       ]
@@ -1011,38 +1059,57 @@
       ],
       "metadata": {
         "id": "jx4VRkngpg3U",
-        "outputId": "c44adc66-61b5-468f-cdb8-cb65ebf71bf3",
+        "outputId": "912cee7c-9e60-43ce-f341-56d18173d4a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.03467346, 0.56631532, 0.90428777, 0.75163453],\n",
-              "       [0.15387352, 0.10545975, 0.19553751, 0.04096015],\n",
-              "       [0.72373455, 0.9660758 , 0.90927031, 0.91936943],\n",
-              "       [0.71584973, 0.56002655, 0.81930066, 0.52610792]])"
+              "array([[0.35844143, 0.92603542, 0.38454548, 0.55964874],\n",
+              "       [0.77526073, 0.1291875 , 0.34651964, 0.42336006],\n",
+              "       [0.93202408, 0.3961465 , 0.23210089, 0.31867666],\n",
+              "       [0.61198023, 0.58559371, 0.82349806, 0.04880886]])"
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "np.random.rand?"
+        "np.random.rand(5,5)"
       ],
       "metadata": {
-        "id": "RSWlhI4_p6Zu"
+        "id": "RSWlhI4_p6Zu",
+        "outputId": "8682591e-5322-41b9-be3c-b26bea8a23fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 75,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.57350679, 0.71375196, 0.64555785, 0.15826364, 0.43785912],\n",
+              "       [0.5018584 , 0.00935681, 0.3436904 , 0.47186165, 0.8370495 ],\n",
+              "       [0.13488975, 0.9993017 , 0.05211603, 0.06930706, 0.51529576],\n",
+              "       [0.53101566, 0.43907921, 0.41228194, 0.4828039 , 0.59067944],\n",
+              "       [0.61922893, 0.96403989, 0.77366459, 0.04246783, 0.23644012]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1067,12 +1134,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sold_phones = [100, 200, 145,200,450, 100,100]\n",
+        "sold_laptops = [100, 200, 145,200,4550, 110,150]\n",
+        "sold_tables = [100, 200, 145,200,4500, 1200,160]\n",
+        "\n",
+        "print(sold_phones[-3:])\n",
+        "print(sold_laptops[-3:])\n",
+        "print(sold_tables[-3:])\n",
+        "\n",
+        "total_phone = sum(sold_phones)/len(sold_phones)\n",
+        "total_laptops = sum(sold_laptops)/len(sold_laptops)\n",
+        "total_tables = sum(sold_tables)/len(sold_tables)\n",
+        "\n",
+        "print(total_phone,total_laptops,total_tables)\n",
+        "total_sold = [total_phone, total_laptops,total_tables]\n",
+        "\n",
+        "for x in total_sold:\n",
+        "    if x > 5 :\n",
+        "      print(\"venta alta\")\n",
+        "    else:\n",
+        "      print(\"venta baja\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "93wXCVCZv4TT"
+        "id": "93wXCVCZv4TT",
+        "outputId": "a8ed830a-419d-400f-f551-2e494d3bc803",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[450, 100, 100]\n",
+            "[4550, 110, 150]\n",
+            "[4500, 1200, 160]\n",
+            "185.0 779.2857142857143 929.2857142857143\n",
+            "venta alta\n",
+            "venta alta\n",
+            "venta alta\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
