Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -80,12 +80,12 @@
       "metadata": {
         "id": "cJVy5mVi-EH2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "lDF46r2IqGlD",
         "outputId": "4160c1bf-94a9-47ce-88a4-b9424db24655",
@@ -144,7 +144,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,6 +272,269 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Passing an Arbitrary Number of Arguments"
+      ],
+      "metadata": {
+        "id": "0jfFGIKTz46R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_pizza(*toppings): # *Arbitary number of array is make of a tuple.\n",
+        "  \"Print the list of topping that have been requested\"\n",
+        "  print(\"Make a pizza with the followings toppings\")\n",
+        "  for topping in toppings:\n",
+        "    print(f\"\\t-{topping}\")\n",
+        "\n",
+        "make_pizza('pepperoni')\n",
+        "make_pizza('mushrooms','green peppers' , 'extra cheese')"
+      ],
+      "metadata": {
+        "id": "e-RkxU10z57z",
+        "outputId": "4bbb159b-3411-49ac-b2f6-06feac835e2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Make a pizza with the followings toppings\n",
+            "\t-pepperoni\n",
+            "Make a pizza with the followings toppings\n",
+            "\t-mushrooms\n",
+            "\t-green peppers\n",
+            "\t-extra cheese\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mixing Positional and Arbitrary Arguments\n",
+        "If you want a function to accept several different kinds of arguments, the\n",
+        "parameter that accepts an arbitrary number of arguments must be placed\n",
+        "last in the function definition **texto en negrita**. Python matches positional and keyword\n",
+        "arguments first and then collects any remaining arguments in the final\n",
+        "parameter."
+      ],
+      "metadata": {
+        "id": "wp_eu8u-03AR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_pizza(size, *toppings):\n",
+        "  print(f\"Make a pizza with the following size {size} and with following toppings:\")\n",
+        "  for topping in toppings:\n",
+        "    print(f\"\\t-{topping}\")\n",
+        "\n",
+        "\n",
+        "make_pizza(10, \"Cheese\",'peperoni', 'hotdog')"
+      ],
+      "metadata": {
+        "id": "p0LFcn3g05LR",
+        "outputId": "c6d1b9c2-f526-43c5-a9ef-75b950f92088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Make a pizza with the following size 10 and with following toppings:\n",
+            "\t-Cheese\n",
+            "\t-peperoni\n",
+            "\t-hotdog\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Using Arbitrary Keyword Arguments**\n",
+        "In this case, you can write functions that accept as many **key-value pairs** as the calling statement provides"
+      ],
+      "metadata": {
+        "id": "pEmiVpXj2VJD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def build_profile(user_name, last_name, **user_information):\n",
+        "  user_information['nombre']=user_name\n",
+        "  user_information['apellido']=last_name\n",
+        "  return user_information\n",
+        "\n",
+        "build_profile('eros','aranibar',cuidad='Peru', edad='30', esposa='Jazmín')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# **user_info cause Python to create\n",
+        "# a dictionary called user_info containing all the extra name-value pairs the\n",
+        "# function receives."
+      ],
+      "metadata": {
+        "id": "mr3irBI22UEZ",
+        "outputId": "04e3d925-4b3c-462a-9c20-315d7eba9632",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'cuidad': 'Peru',\n",
+              " 'edad': '30',\n",
+              " 'esposa': 'Jazmín',\n",
+              " 'nombre': 'eros',\n",
+              " 'apellido': 'aranibar'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8-12. Sandwiches: Write a function that accepts a list of items a person wants\n",
+        "on a sandwich. The function should have one parameter that collects as many\n",
+        "items as the function call provides, and it should print a summary of the sandwich that’s being ordered. Call the function three times, using a different number of arguments each time"
+      ],
+      "metadata": {
+        "id": "wsDeqrty5Xmm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# function get_sandwich\n",
+        "# input list of items for a sandwich\n",
+        "# many items and one parameter *arguments\n",
+        "# print a summary\n",
+        "\n",
+        "## 1\n",
+        "def get_sandwich(*ingredients):\n",
+        "  print(ingredients)\n",
+        "  print(\"Esta es la lista de ingredientes para los sandwiches\")\n",
+        "  for ingredientes in ingredients[0]:\n",
+        "    print(f\"\\t-{ingredientes}\")\n",
+        "\n",
+        "get_sandwich(['pan chabata','tomate','pollo','queso'])\n",
+        "\n",
+        "## 2\n",
+        "def get_sandwich_two( pan,proteina, *ingredients):\n",
+        "    print(\"Esta es la lista de ingredientes para los sandwiches\")\n",
+        "    print(f\"\\t El pan es de tipo {pan} y de protenia se agrego {proteina}\")\n",
+        "    for ingredientes in ingredients[0]:\n",
+        "      print(f\"\\t-{ingredientes}\")\n",
+        "\n",
+        "get_sandwich_two('bachata','jamón',['tomate','queso'])"
+      ],
+      "metadata": {
+        "id": "_EQkuJXB5YlT",
+        "outputId": "88c55b62-2d84-4c5f-a115-2655f477f83b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(['pan chabata', 'tomate', 'pollo', 'queso'],)\n",
+            "Esta es la lista de ingredientes para los sandwiches\n",
+            "\t-pan chabata\n",
+            "\t-tomate\n",
+            "\t-pollo\n",
+            "\t-queso\n",
+            "Esta es la lista de ingredientes para los sandwiches\n",
+            "\t El pan es de tipo bachata y de protenia se agrego jamón\n",
+            "\t-tomate\n",
+            "\t-queso\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8-14. Cars: Write a function that stores information about a car in a dictionary. The function should always receive a manufacturer and a model name. It\n",
+        "should then accept an arbitrary number of keyword arguments. Call the function with the required information and two other name-value pairs, such as a\n",
+        "color or an optional feature. Your function should work for a call like this one:\n",
+        "car = make_car('subaru', 'outback', color='blue', tow_package=True)\n",
+        "Print the dictionary that’s returned to make sure all the information was\n",
+        "stored correctly."
+      ],
+      "metadata": {
+        "id": "4bs06ClV8Q7v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Constraint = function with arbitary keyword of arguments.(Dictionary)\n",
+        "# Function, store the first parameters into the dictionary\n",
+        "# then print.\n",
+        "\n",
+        "def make_car(type_car, date_launched,**aditional_features):\n",
+        "    aditional_features['carro tipo']=type_car\n",
+        "    aditional_features['fecha']=date_launched\n",
+        "    print(\"El carro presenta la siguientes carácteristicas:\")\n",
+        "    return print(aditional_features)\n",
+        "\n",
+        "carro_nuevo = make_car('ferrari', '2015', color = 'red', size = 'small' , speed = 'fast')\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FvlmfAXZ8uSP",
+        "outputId": "ce308439-049a-4362-9986-65504e39c26e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'small', 'speed': 'fast', 'carro tipo': 'ferrari', 'fecha': '2015'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "svB6aLpD8R7e"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
