Se creó con Colab

--- a/Working_with_funcitons_and_Classes.ipynb
+++ b/Working_with_funcitons_and_Classes.ipynb
@@ -301,7 +301,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,16 +506,163 @@
         "    return print(aditional_features)\n",
         "\n",
         "carro_nuevo = make_car('ferrari', '2015', color = 'red', size = 'small' , speed = 'fast')\n",
-        "\n"
+        "\n",
+        "make_car(\"Chino\",'1005',color ='red', size = 'large', price = '1M')"
       ],
       "metadata": {
         "id": "FvlmfAXZ8uSP",
-        "outputId": "ce308439-049a-4362-9986-65504e39c26e",
+        "outputId": "006274ae-3f7f-43ad-de1a-84886b1c6cf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'small', 'speed': 'fast', 'carro tipo': 'ferrari', 'fecha': '2015'}\n",
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'large', 'price': '1M', 'carro tipo': 'Chino', 'fecha': '1005'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import aux_functions\n",
+        "\n",
+        "aux_functions.make_car(\"Chino\",'1005',color ='red', size = 'large', price = '1M')\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "svB6aLpD8R7e",
+        "outputId": "b49edb09-302a-4500-d87f-e40eb7adedd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'large', 'price': '1M', 'carro tipo': 'Chino', 'fecha': '1005'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from aux_functions import make_car as car\n",
+        "\n",
+        "car(\"Chino\",'1005',color ='red', size = 'large', price = '1M')"
+      ],
+      "metadata": {
+        "id": "Ucj9PmGq8Y2s",
+        "outputId": "1c930248-6669-409a-cdb1-634cefe8c349",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'large', 'price': '1M', 'carro tipo': 'Chino', 'fecha': '1005'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import aux_functions as p\n",
+        "p.make_car(\"Chino\",'1005',color ='red', size = 'large', price = '1M')"
+      ],
+      "metadata": {
+        "id": "AGrctr7T8t8O",
+        "outputId": "70f74338-f5e4-4613-ff67-e8c7aacaa026",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El carro presenta la siguientes carácteristicas:\n",
+            "{'color': 'red', 'size': 'large', 'price': '1M', 'carro tipo': 'Chino', 'fecha': '1005'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from aux_functions import * #This code import all the functions in the module\n",
+        "# aux_functions, is not recommended.\n",
+        "def new_car(\n",
+        "    parameter_0,*parameter_1):\n",
+        "  print(f\"Hello, {parameter_0}\")\n",
+        "\n",
+        "new_car(\"Jazmin\")"
+      ],
+      "metadata": {
+        "id": "WCJUpA1s9w1e",
+        "outputId": "383d0368-e93a-41fa-c4d9-e57b35c06556",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, Jazmin\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Styling a function\n",
+        "def make_car(\n",
+        "    type_car, date_launched,**aditional_features):\n",
+        "  aditional_features['carro tipo']=type_car\n",
+        "  aditional_features['fecha']=date_launched\n",
+        "  print(\"El carro presenta la siguientes carácteristicas:\")\n",
+        "  return print(aditional_features)\n",
+        "\n",
+        "carro_nuevo = make_car('ferrari','2015',color='red',size ='small',speed ='fast')\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ioFBJUscAInt",
+        "outputId": "0f1ebd31-5f42-4ae3-e804-e179046285ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,15 +673,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "svB6aLpD8R7e"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
