Se creó con Colab

--- a/Clase6/manejo_de_archivos_modulos_y_paquetes.ipynb
+++ b/Clase6/manejo_de_archivos_modulos_y_paquetes.ipynb
@@ -499,13 +499,32 @@
         "        self.edad = edad\n",
         "\n",
         "    def saludar(self):\n",
-        "        print(f\"Hola, soy {self.nombre}.\")"
+        "        print(f\"Hola, soy {self.nombre} y tengo {self.edad}\")\n",
+        "\n",
+        "persona1 = Persona(\"Eros\", 30)\n",
+        "persona1.saludar()\n",
+        "persona2 = Persona(\"Jazmin\",28)\n",
+        "persona2.saludar()\n",
+        "\n"
       ],
       "metadata": {
-        "id": "FxZIxKxXXTbu"
+        "id": "FxZIxKxXXTbu",
+        "outputId": "7d0fad7f-82c0-4ae6-aacb-5765863b48a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola, soy Eros y tengo 30\n",
+            "Hola, soy Jazmin y tengo 28\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -523,13 +542,159 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Crear una clase que tome como valores de la instancia la cantidad\n",
+        "de números a evaluar, el número multiplo objetivo. La clase debe tener los siguientes metodos.\n",
+        "1. generar_mutiplos () : imprime todos los múltiplos del múltiplo objetivo menores al número máximo.\n",
+        "2. contar_multiplos () : cuenta la cantidad de múltiplos\n",
+        "3. contar_resto () : cuenta la cantidad de números no múltiplos."
+      ],
+      "metadata": {
+        "id": "xZ2XcTOufJYd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Multiplos:\n",
+        "    def __init__(self, max_number, multiplo_objetivo):\n",
+        "        self.max_number = max_number\n",
+        "        self.multiplo_objetivo = multiplo_objetivo\n",
+        "\n",
+        "    def generar_multiplos(self):\n",
+        "        multiplos_ = [x  for x in list(range(1,self.max_number+1)) if x% self.multiplo_objetivo == 0]\n",
+        "        for y in multiplos_:\n",
+        "          print(y)\n",
+        "\n",
+        "    def contar_multiplos(self):\n",
+        "        multiplos_ = [x  for x in list(range(1,self.max_number+1)) if x% self.multiplo_objetivo == 0]\n",
+        "        print(len(multiplos_))\n",
+        "\n",
+        "    def contar_resto(self):\n",
+        "        multiplos_ = [x  for x in list(range(1, self.max_number+1)) if x% self.multiplo_objetivo == 0]\n",
+        "        print( len(list(range(1,self.max_number))) - len(multiplos_))\n",
+        "\n",
+        "\n",
+        "numero2 = Multiplos(20,2)\n",
+        "numero2.generar_multiplos()\n",
+        "numero2.contar_multiplos()\n",
+        "numero2.contar_resto()"
+      ],
+      "metadata": {
+        "id": "C_tqThPaXasA",
+        "outputId": "6ffe9095-de05-4e4d-d2bf-2bbb9214c4c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n",
+            "10\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "C_tqThPaXasA"
+        "id": "GGPbpZcqfCW8"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Crea una clase Analizador Texto que reciba como parámetro una cadena de texto. La clase debe implementar los siguientes métodos:\n",
+        "1. palabras_unicas() Devuelve un set con todas las palabras únicas del texto , ignorando mayúsculas y signos de puntuación.\n",
+        "2. palabra_mas_frecuente() Devuelve la palabra que más veces aparece en el texto. Si hay empate, devuelve la que aparece primero.\n",
+        "3. buscar_palabras_con(subcadena) Devuelve una lista de palabras únicas que contiene la subcadena dada (sin importar mayúscula/minúsuclas).\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wNHfHzBBi654"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "casa =\"Mama, meli.,.\"\n",
+        "casa2= casa.split()\n",
+        "print(casa2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "COmKzNVkm1MA",
+        "outputId": "161b367b-3035-4543-d45e-dcf4a2e26ee7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Mama,', 'meli.,.']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Analizador_texto:\n",
+        "  def __init__(self, cadena_texto):\n",
+        "    self.cadena_texto = cadena_texto\n",
+        "\n",
+        "  def palabras_unicas(self):\n",
+        "      step1 = list(self.cadena_texto.lower())\n",
+        "      step1.remove(\".\")\n",
+        "      return set(step1)\n",
+        "\n",
+        "\n",
+        "letras = Analizador_texto(\"Nana mama .asdweea\")\n",
+        "print(letras.palabras_unicas())\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Z3kymOazjklb",
+        "outputId": "7a9d8579-adce-466b-b0ba-63432c09defc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'w', 'd', 'm', 's', 'n', 'a', ' ', 'e'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -635,12 +800,88 @@
         "\n",
         "class Perro(Animal):\n",
         "    def hablar(self):\n",
-        "        print(\"Guau\")"
+        "        print(\"Guau\")\n",
+        "\n",
+        "Perro1 = Perro(\"Jesus\")\n",
+        "Perro1.hablar()"
       ],
       "metadata": {
-        "id": "5EPTKxOsXukH"
+        "id": "5EPTKxOsXukH",
+        "outputId": "1a3f5eb4-6dcb-4d2e-87dc-8d57d889366b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Guau\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Define una clase base Dispositivo con un atributo tipo y un método funcionar() que imprime:\n",
+        "\"Este dispositivo está en funcionamiento.\"\n",
+        "\n",
+        "1. Crea tres clases hijas: Laptop, Smartphone y Tablet. Estas no deben sobrescribir el método funcionar().\n",
+        "\n",
+        "2. Luego, crea una clase CentroTecnologico con estas funcionalidades:\n",
+        "\n",
+        "> registrar_dispositivo(dispositivo)\n",
+        "Recibe una instancia de Dispositivo o cualquiera de sus subclases y la guarda en una lista interna. Si el objeto no es una instancia válida, lanza un TypeError.\n",
+        "\n",
+        "> listar_dispositivos()\n",
+        "Imprime el tipo de todos los dispositivos registrados en orden de ingreso.\n",
+        "\n",
+        "> probar_dispositivos()\n",
+        "Llama al método funcionar() de cada dispositivo."
+      ],
+      "metadata": {
+        "id": "2jgXYo_V4_Or"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dispositivo:\n",
+        "  def __init__(self,tipo):\n",
+        "    self.tipo = tipo\n",
+        "\n",
+        "    def funcionar(self):\n",
+        "      print(\"Este dispositivo esta en funcionamiento\")\n",
+        "\n",
+        "class Laptop(Dispositivo):\n",
+        "    pass\n",
+        "\n",
+        "class Smartphone(Dispositivo):\n",
+        "    pass\n",
+        "\n",
+        "class Tablet(Dispositivo):\n",
+        "    pass\n",
+        "\n",
+        "class CentroTecnologico:\n",
+        "    def __init__(self)\n",
+        "      self.listar_dispositivos = []\n",
+        "\n",
+        "    def registrar_dispositivo(dispositivo)\n",
+        "    \"Solo recibe instancias o subclases creadas\"\n",
+        "\n",
+        "\n",
+        "    def listar_dispositivos()\n",
+        "\n",
+        "    def probar_dispositivos()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RS_2SYJQ50oV"
+      },
+      "execution_count": 128,
       "outputs": []
     },
     {
